# packet-radio-rs

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  README.md  packet-radio.toml  pico_adc_hardware.md
aprs-viewer/: Cargo.toml
aprs-viewer/assets/: us-base.pmtiles
aprs-viewer/public/: app.js  aprs_symbols.js  index.html  map_init.js  playback.js  station_detail.js
aprs-viewer/src/: main.rs  models.rs
aprs-viewer/src/server/: aprs_is.rs  cleanup.rs  config.rs  convert.rs  db.rs  error.rs  fcc.rs  ingest.rs  map_manager.rs  mod.rs  state.rs  ws.rs
aprs-viewer/style/: main.css
autoresearch/: experiment.toml
core/: Cargo.toml
core/src/: lib.rs  tnc.rs
core/src/aprs/: mod.rs  nmea.rs
core/src/ax25/: frame.rs  mod.rs
core/src/fx25/: decode.rs  encode.rs  gf256.rs  mod.rs  rs.rs
core/src/kiss/: mod.rs
core/src/modem/: adaptive.rs  afsk.rs  binary_xor.rs  corr_slicer.rs  delay_multiply.rs  demod.rs  demod_9600.rs  filter.rs  fixed_vec.rs  frame_output.rs  hdlc_bank.rs  hilbert.rs  mod.rs  mod_9600.rs  multi.rs  multi_9600.rs  pll.rs  scrambler.rs  soft_hdlc.rs
desktop/: Cargo.toml  test-config.toml
desktop/examples/: gen_test_wav.rs
desktop/src/: audio.rs  cli.rs  config.rs  decoder.rs  frame_fmt.rs  headless.rs  kiss_server.rs  main.rs  processing.rs  tx.rs
desktop/src/tui/: event.rs  mod.rs  state.rs
desktop/src/tui/ui/: aprs.rs  header.rs  mod.rs  packets.rs  settings.rs
desktop/src/tui/widgets/: dialog.rs  file_picker.rs  mod.rs  selectable_list.rs  text_input.rs
docs/: ARCHITECTURE.md  ESP32_GUIDE.md  GETTING_STARTED.md  HARDWARE.md  HARDWARE_DEVICE.md  MCU_DEMOD_REVIEW.md  MCU_TEST_TOOLS.md  MODEM_DESIGN.md  MULTI_BAUD.md  NOVEL_STRATEGIES.md  OPTIMIZATION_LOG.md  SAMPLE_RATE_ANALYSIS.md  TEST_PLAN.md
esp32/: Cargo.toml
esp32/src/: main.rs
esp32c3-host/: Cargo.toml
esp32c3-host/src/: main.rs  protocol.rs
esp32c3-test/: Cargo.toml
esp32c3-test/.cargo/: config.toml
esp32c3-test/src/: main.rs
esp32c6-test/: Cargo.toml  build.rs
esp32c6-test/src/: main.rs  protocol.rs
fcc-data/: Cargo.toml
fcc-data/src/: db.rs  download.rs  error.rs  geo.rs  ingest.rs  lib.rs  models.rs  parse.rs
fcc-data/src/geocode/: census.rs  mod.rs  zip_centroid.rs
fcc-data/src/migrations/: 001_initial.sql  002_add_fields.sql  003_add_indexes.sql
fcc-data/src/tui/: mod.rs  state.rs  ui.rs
memory/: ble-kiss-tnc.md
pico2w-test/: Cargo.toml  memory.x
pico2w-test/.cargo/: config.toml
pico2w-test/src/: main.rs  protocol.rs
reference/: Cargo.toml
reference/src/: db.rs  geo.rs  lib.rs  source.rs
reference/src/cwop/: db.rs  fetcher.rs  mod.rs  parser.rs
reference/src/migrations/: 001_initial.sql
reference/tests/fixtures/: CA.html  ME.html  canada.html
rp2040-test/: Cargo.toml  memory.x
rp2040-test/.cargo/: config.toml
rp2040-test/src/: main.rs  protocol.rs
shared/: Cargo.toml
shared/src/: aprs_is.rs  config.rs  igate.rs  lib.rs
tests/: demod_comparative.rs  generate_9600_tests.sh
tests/benchmark/: Cargo.toml  attribution.rs  baud9600.rs  common.rs  compare.rs  corr.rs  diff.rs  dm.rs  export.rs  fusion.rs  fx25.rs  main.rs  pll_300.rs  smart3.rs  soft_diag.rs  suite.rs  synthetic.rs  twist.rs  window.rs  xor.rs
tests/common/: mod.rs
tests/kiss_e2e/: Cargo.toml
tests/kiss_e2e/src/: main.rs
tests/wav/: 03_100-mic-e-bursts-flat.wav.dm_debug.csv  README.md  gen_1200_tests.sh  gen_300_tests.sh
tools/kiss-dump/: Cargo.toml
tools/kiss-dump/src/: main.rs
tools/kiss-dump/tests/: compare_test.sh
web/: Cargo.toml
web/migrations/: 001_initial.sql  002_weather_history.sql
web/public/: app.js  aprs_symbols.js  index.html  map_init.js  station_detail.js
web/src/: main.rs  models.rs
web/src/server/: aprs_is.rs  config.rs  convert.rs  db.rs  ingest.rs  mod.rs  state.rs  tiles.rs  ws.rs
web/style/: main.css
