[workspace]
members = [
    "core",
    "desktop",
    "esp32",
    "esp32c3-host",
    "shared",
    "tests/benchmark",
    "tests/kiss_e2e",
]
exclude = [
    "esp32c3-test",  # Requires riscv32imc target (ESP32-C3) — build separately
    "esp32c6-test",  # Requires riscv32imac target (ESP32-C6) — build separately
    "rp2040-test",   # Requires thumbv6m-none-eabi target — build separately
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# TODO: Pick your project name and update this
description = "A cross-platform packet radio TNC and APRS engine written in Rust"
