[package]
name = "aprs-viewer"
version = "0.1.0"
edition = "2021"
description = "APRS web viewer with real-time map display"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "1"

# Core crate
packet-radio-core = { path = "../core", features = ["std", "multi-decoder"] }

# Shared utilities (APRS-IS, config, IGate)
packet-radio-shared = { path = "../shared" }

# Reference data (CWOP station positions, etc.)
reference = { path = "../reference" }

# FCC callsign database (optional enrichment)
fcc-data = { path = "../fcc-data" }

# WebSocket support
futures = "0.3"

# Auto-open browser
open = "5"

# HTTP client for map downloads
reqwest = { version = "0.12", features = ["stream"] }

# Embedded static assets
rust-embed = "8"

# URL parsing (SSRF protection)
url = "2"

# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "aprs-viewer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
