[package]
name = "packet-radio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "no_std core library for packet radio: AFSK modem, AX.25, APRS, KISS"

[features]
default = []
alloc = []          # Enable Vec/String in APRS parser
std = ["alloc"]     # Full standard library support
float = []          # Use f32 for DSP (vs fixed-point i16)
multi-decoder = []  # Multiple parallel demodulators
9600-baud = []      # G3RUH/GMSK modem support
fx25 = []           # FX.25 forward error correction

[dependencies]
# No dependencies by default — this is a no_std crate

[dev-dependencies]
# Test dependencies (only used on host)
