[package]
name = "packet-radio-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop packet radio TNC — sound card I/O, KISS TCP, APRS-IS"

[dependencies]
packet-radio-core = { path = "../core", features = ["std", "float", "multi-decoder", "9600-baud"] }
packet-radio-shared = { path = "../shared" }

# Audio I/O
cpal = "0.15"
hound = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Lock-free channel for audio thread -> processing thread
crossbeam-channel = "0.5"

# TUI
ratatui = "0.30"
crossterm = "0.27"

# Config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Platform (safe fd manipulation for stderr redirect)
rustix = { version = "0.38", features = ["stdio"] }

# Serial port (for KISS serial TNC)
# serialport = "4"

[dev-dependencies]
insta = "1"
