[package]
name = "fcc-data"
version = "0.1.0"
edition = "2021"
description = "FCC Amateur Radio License Database — download, parse, geocode, search"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "multipart"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
csv = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XDG paths
dirs = "6"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ZIP extraction
zip = "2"

# Latin-1 encoding
encoding_rs = "0.8"

# Progress bars
indicatif = "0.17"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Futures for streaming
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[[bin]]
name = "fcc-tool"
path = "src/bin/fcc-tool.rs"

[dev-dependencies]
tempfile = "3"
