[package]
name = "reference"
version = "0.1.0"
edition = "2021"
description = "Reference data system for enriching APRS data with static station information"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# HTTP fetching
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# HTML parsing
scraper = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XDG paths
dirs = "6"

# Error handling
thiserror = "2"

# Async trait
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "reference-tool"
path = "src/bin/reference-tool.rs"

[dev-dependencies]
tempfile = "3"
